--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="https://unsplash.com/photos/GoLWB4p8JXw" target="_blank">Mountains under the sky</a>
         </div>
     </div>
+    <button>Show More</button>
 
     <script src="script.js"></script>
 </body>
